--- a/style.css
+++ b/style.css
@@ -24,24 +24,24 @@ a{
 
 /* ===== HEADER ===== */
 header{
-  position:fixed;
+  position:flex;
   top:0;
   left:0;
   width:100%;
-  background:#e11d48;
+  background:#000000;
   color:white;
   z-index:1000;
 }
 
 .navbar{
-  display:flex;
+  display:fixed;
   justify-content:space-between;
   align-items:center;
   padding:14px 0;
 }
 
 .logo img{
-  height:38px;
+  height: 50px;px;
   display:block;
 }
 
